--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     ]
   },
   "dependencies": {
+    "@arco-design/web-vue": "^2.57.0",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "electron-updater": "^6.3.9"
   },
   "devDependencies": {
+    "@arco-plugins/vite-vue": "^1.4.6",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
@@ -52,9 +54,12 @@
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
+    "unplugin-auto-import": "^20.1.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.5",
     "vue": "^3.5.17",
     "vue-eslint-parser": "^10.2.0",
+    "vue-i18n": "^11.1.12",
     "vue-tsc": "^3.0.3"
   }
 }
