feat: 引入 tailwind css 和 daisyUI

--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.0",
+    "daisyui": "^5.1.13",
     "electron": "^37.2.3",
     "electron-builder": "^25.1.8",
     "electron-vite": "^4.0.0",
@@ -53,6 +55,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.8.3",
     "unplugin-auto-import": "^20.1.0",
     "unplugin-vue-components": "^29.0.0",
