--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@huggingface/transformers": "^3.7.3",
+    "electron": "^39.2.3",
     "electron-updater": "^6.3.9",
     "vue3-colorpicker": "^2.3.0"
   },
@@ -45,12 +46,13 @@
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@electron/rebuild": "^4.0.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.0",
     "daisyui": "^5.1.13",
-    "electron": "^37.2.3",
     "electron-builder": "^25.1.8",
+    "electron-rebuild": "^3.2.9",
     "electron-vite": "^4.0.0",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "^10.3.0",
